Can't select an object with OpenSubdiv enabled #46332

Closed
opened 2015-09-30 17:35:49 +02:00 by Thomas Beck · 4 comments
Member

Hi Sergey,

as discussed in IRC, here is my report...

System Information
2 Cards: GTX560ti oc 2GB, i7 16GB

Blender Version
Tested with latest master (de360c4)

Short description of error
When I enable OpenSubdiv (GLSL Compute / Occlusion Queries) I can't select my mesh anymore. It's even not showing up in the ALT+RMB popup any longer.

Exact steps for others to reproduce the error
See the attached file ( opensubdiv.blend ) . Enable OpenSubdiv and try to select it afterwards. I'm attaching a video ( SelectionError.mp4 ) that shows the issue too..

Greetings,
Thomas

Hi Sergey, as discussed in IRC, here is my report... **System Information** 2 Cards: GTX560ti oc 2GB, i7 16GB **Blender Version** Tested with latest master (de360c4) **Short description of error** When I enable OpenSubdiv (GLSL Compute / Occlusion Queries) I can't select my mesh anymore. It's even not showing up in the ALT+RMB popup any longer. **Exact steps for others to reproduce the error** See the attached file ( [opensubdiv.blend](https://archive.blender.org/developer/F241157/opensubdiv.blend) ) . Enable OpenSubdiv and try to select it afterwards. I'm attaching a video ( [SelectionError.mp4](https://archive.blender.org/developer/F241156/SelectionError.mp4) ) that shows the issue too.. Greetings, Thomas
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Sergey Sharybin was assigned by Thomas Beck 2015-09-30 17:35:49 +02:00
Author
Member

Added subscriber: @plasmasolutions

Added subscriber: @plasmasolutions

This issue was referenced by fabde2ab43

This issue was referenced by fabde2ab43e105f88b552561b077ea06672e6245

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
3 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#46332
No description provided.