Fix T46332: Can't select an object with OpenSubdiv enabled

The issue was introduced by a wrong fix for T46247. Now both reports should
be properly solved.